--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 
 
 <head>
@@ -14,9 +15,8 @@
 
         <div id="body">
             <div id="mainText">
-                
+                <h2>Hello World!</h2>
                 <p id="introduction">
-                    <strong>Hello World!</strong><br /><br />
                     My name is Malgo and I'm learning how to code with a dream to become a frontend developer one day. I have started coding in June 2017 and this is my first demo website. It is an ongoing project and it is intended to develop in time.
                 </p>
 
