Second example added

--- a/example1.html
+++ b/example1.html
@@ -2,7 +2,7 @@
 
 
 <head>
-    <title>MB Example 1</title>
+    <title>Restaurant booking form</title>
     <script src="header.js"></script>
     <script src="sidebar.js"></script>
     <script src="footer.js"></script>
