added pie chart display

--- a/example2.html
+++ b/example2.html
@@ -18,25 +18,26 @@
 
                 <div id="cakeText">
                     <h2 class="cake">Cake shop</h2>
-                    <p>Cake ordering page.</p>
+                    <p>Here you can order a variety of cake. Order whole cakes or single pieces. 6 pieces make one cake so you can order up to 5 individual pieces (otherwise order a whole cake).</p>
                 </div>
 
-                <div id="cakeSelector">
-                    <p>Select your cake here</p>
-                    <table id="cakeList">
-                        <!--table created through example.js-->
-                    </table>
+                <div id="cakeWrapper">
+                    <div id="cakeSelector">
+                        <p>Select your cake here</p>
+                        <table id="cakeList">
+                            <!--table created through example.js-->
+                        </table>
 
-                </div>
+                    </div>
 
-                <div id="cakeDisplay">
-                    <p>Your order will be displayed here</p> <br />
-                    <p id="orderDetails"></p>
-                </div>
+                    <div id="cakeDisplay">
+                        <p>Your order will be displayed here</p> <br />
+                    </div>
 
-                <div id="cakeOrder">
-                    <p>Order summary will display here</p>
-                    <div id="orderSummary"></div>
+                    <div id="cakeOrder">
+                        <p>Order summary will display here</p>
+                        <div id="orderSummary"></div>
+                    </div>
                 </div>
             </div>
 
