--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 
 <head>
-    <title>MB demo1</title>
+    <title>Introduction</title>
     <script src="header.js"></script>
     <script src="sidebar.js"></script>
     <script src="footer.js"></script>
@@ -16,6 +16,7 @@
         <div id="body">
             <div id="mainText">
                 <h2>Hello World!</h2>
+                <br />
                 <p id="introduction">
                     My name is Malgo and I'm learning how to code with a dream to become a frontend developer one day. I have started coding in June 2017 and this is my first demo website. It is an ongoing project and it is intended to develop in time.
                 </p>
