clear order button added

--- a/example2.html
+++ b/example2.html
@@ -37,6 +37,7 @@
                     <div id="cakeOrder">
                         <p>Order summary will display here</p>
                         <div id="orderSummary"></div>
+                        <button id="clearOrder">Clear order</button>
                     </div>
                 </div>
             </div>
