message box added

--- a/example2.html
+++ b/example2.html
@@ -7,7 +7,9 @@
     <script src="sidebar.js"></script>
     <script src="footer.js"></script>
     <script src="example2.js"></script>
+    <script src="messageBox.js"></script>
     <link href="style.css" type="text/css" rel="stylesheet" />
+    <link href="example2.css" type="text/css" rel="stylesheet" />
 
 </head>
 <body>
