--- a/example1.html
+++ b/example1.html
@@ -7,7 +7,9 @@
     <script src="sidebar.js"></script>
     <script src="footer.js"></script>
     <script src="example1.js"></script>
+    <script src="messageBox.js"></script>
     <link href="style.css" type="text/css" rel="stylesheet" />
+    <link href="example1.css" type="text/css" rel="stylesheet" />
 
 </head>
 <body>
