--- a/example3.html
+++ b/example3.html
@@ -7,6 +7,7 @@
     <script src="sidebar.js"></script>
     <script src="footer.js"></script>
     <script src="example3.js"></script>
+    <script src="messageBox.js"></script>
     <link href="style.css" type="text/css" rel="stylesheet" />
     <link href="example3.css" type="text/css" rel="stylesheet" />
 
