added sound and scoring

--- a/example4.html
+++ b/example4.html
@@ -39,6 +39,12 @@
                             If you cut incorrect wire or run our of time the bombs will explode and you lose the game.
                         </p>
                     </div>
+                    <div id="bottomPanel">
+                        <p>Your 5 best results from the current session:</p>
+                        <div id="resultsWrap">
+                            <p id="resultsMessage">(Every time you win the game you will receive a score, the top 5 will display here.)</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
