--- a/example4.html
+++ b/example4.html
@@ -40,10 +40,11 @@
                         </p>
                     </div>
                     <div id="bottomPanel">
-                        <p>Your 5 best results from the current session:</p>
+                        <p>Your 5 best results:</p>
                         <div id="resultsWrap">
                             <p id="resultsMessage">(Every time you win the game you will receive a score, the top 5 will display here.)</p>
                         </div>
+                        <button id="reset">Reset scores</button>
                     </div>
                 </div>
             </div>
