--- a/example4.html
+++ b/example4.html
@@ -6,6 +6,7 @@
     <script src="header.js"></script>
     <script src="sidebar.js"></script>
     <script src="footer.js"></script>
+    <script src="utility.js"></script>
     <script src="example4.js"></script>
     <link href="style.css" type="text/css" rel="stylesheet" />
     <link href="example4.css" type="text/css" rel="stylesheet" />
