file restructure and visual revamp of the website

--- a/example1.html
+++ b/example1.html
@@ -8,14 +8,16 @@
     <script src="footer.js"></script>
     <script src="example1.js"></script>
     <script src="messageBox.js"></script>
-    <link href="style.css" type="text/css" rel="stylesheet" />
-    <link href="example1.css" type="text/css" rel="stylesheet" />
+    <link href="css/style.css" type="text/css" rel="stylesheet" />
+    <link href="css/style-subpages.css" type="text/css" rel="stylesheet" />
+    <link href="css/example1.css" type="text/css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400" rel="stylesheet">
 
 </head>
 <body>
-    <div id="container">
+    <div id="container" class="container">
 
-        <div id="body">
+        <div id="body" class="body">
             <div id="mainText">
                 <h2>Restaurant booking form</h2>
                 <p>
