--- a/index.html
+++ b/index.html
@@ -5,20 +5,26 @@
 <head>
     <title>Introduction</title>
     <script src="header.js"></script>
-    <script src="sidebar.js"></script>
     <script src="footer.js"></script>
-    <link href="style.css" type="text/css" rel="stylesheet" />
+    <link href="css/style.css" type="text/css" rel="stylesheet" />
+    <link href="css/intro.css" type="text/css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400" rel="stylesheet">
 
 </head>
 <body>
-    <div id="container">
+    <div id="container" class="container">
 
         <div id="body">
             <div id="mainText">
+                <br />
                 <h2>Hello World!</h2>
                 <br />
-                <p id="introduction">
-                    My name is Malgo and I'm learning how to code with a dream to become a frontend developer one day. I have started coding in June 2017 and this is my first demo website. It is an ongoing project and it is intended to develop in time.
+                <p id="introduction" class="text">
+                    My journey to become a professional frontend developer has begun in June 2018. <br>
+                    I begun this journey with no prior knowledge of any frontend technologies, some basic experience with C# and SQL and a very high level of general computer literacy.<br>
+                    I decided to take this step after ten years of a career in building industry because over those years I have been living with a belief that I should have studied Computer Science in the first place and that I am cut out to be a software engineer rather than a building engineer.<br>
+                    Now I have decided it is a right time in my life to put this belief to a test.<br>
+                    This demo website is as much a showcase of my current skill level as a documentation of my journey. For this reason I will be retaining each of the subpages in it's initial form rather than developing them further as I progress in my journey. I hope that this way I can not only show what I can do, but also how fast and well I can learn.<br>
                 </p>
 
             </div>
