--- a/example3.html
+++ b/example3.html
@@ -8,14 +8,16 @@
     <script src="footer.js"></script>
     <script src="example3.js"></script>
     <script src="messageBox.js"></script>
-    <link href="style.css" type="text/css" rel="stylesheet" />
-    <link href="example3.css" type="text/css" rel="stylesheet" />
+    <link href="css/style.css" type="text/css" rel="stylesheet" />
+    <link href="css/style-subpages.css" type="text/css" rel="stylesheet" />
+    <link href="css/example3.css" type="text/css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400" rel="stylesheet">
 
 </head>
 
 <body>
-    <div id="container">
-        <div id="body">
+    <div id="container" class="container">
+        <div id="body" class="body">
             <div id="mainText">
                 <div id="grid" class="mastermind">
                     <div id="solution" class="gameRow">
