--- a/example4.html
+++ b/example4.html
@@ -8,15 +8,17 @@
     <script src="footer.js"></script>
     <script src="utility.js"></script>
     <script src="example4.js"></script>
-    <link href="style.css" type="text/css" rel="stylesheet" />
-    <link href="example4.css" type="text/css" rel="stylesheet" />
+    <link href="css/style.css" type="text/css" rel="stylesheet" />
+    <link href="css/style-subpages.css" type="text/css" rel="stylesheet" />
+    <link href="css/example4.css" type="text/css" rel="stylesheet" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400" rel="stylesheet">
 
 </head>
 
 <body>
-    <div id="container">
-        <div id="body">
+    <div id="container" class="container">
+        <div id="body" class="body">
             <div id="mainText">
                 <div id="gameArea">
                     <div id="topPanel">
