adjusted to improve responsive design

--- a/example4.html
+++ b/example4.html
@@ -1,25 +1,29 @@
 ﻿<!DOCTYPE html>
-
+<html lang="eng">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Bomb disposal</title>
     <script src="header.js"></script>
     <script src="sidebar.js"></script>
     <script src="footer.js"></script>
     <script src="utility.js"></script>
     <script src="example4.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400" rel="stylesheet">
     <link href="css/style.css" type="text/css" rel="stylesheet" />
     <link href="css/style-subpages.css" type="text/css" rel="stylesheet" />
     <link href="css/example4.css" type="text/css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400" rel="stylesheet">
+    
 
 </head>
 
 <body>
     <div id="container" class="container">
         <div id="body" class="body">
-            <div id="mainText">
+            <div id="mainText" class="mainText">
                 <div id="gameArea">
                     <div id="topPanel">
                         <button id="start" class="button">New game</button>
