--- a/example5.html
+++ b/example5.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="css/icon-font-weather.css">
         <link href="css/style.css" type="text/css" rel="stylesheet" />
         <link href="css/style-subpages.css" type="text/css" rel="stylesheet" />
-        <link rel="stylesheet" href="css/sky.css">
+        <link rel="stylesheet" href="css/sky.css"/>
 
     </head>
     <body>
@@ -45,6 +45,7 @@
 
                 <div class="sky-text">
                     <p>This is a pure CSS animation, with no JavaScript involved.</p>
+                    <p class="mobile-only">It displays better on desktop devices.</p>
                 </div>
                 </div>
             </div> 
