--- a/example2.html
+++ b/example2.html
@@ -1,17 +1,22 @@
 ﻿<!DOCTYPE html>
 
-
+<html lang="eng">
+    
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Cake shop</title>
     <script src="header.js"></script>
     <script src="sidebar.js"></script>
     <script src="footer.js"></script>
     <script src="example2.js"></script>
     <script src="messageBox.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400" rel="stylesheet">
     <link href="css/style.css" type="text/css" rel="stylesheet" />
     <link href="css/style-subpages.css" type="text/css" rel="stylesheet" />
     <link href="css/example2.css" type="text/css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400" rel="stylesheet">
+    
 
 </head>
 <body>
