--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 ﻿
 <!DOCTYPE html>
-
+<html lang="eng">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Introduction</title>
     <script src="header.js"></script>
     <script src="footer.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400" rel="stylesheet">
     <link href="css/style.css" type="text/css" rel="stylesheet" />
     <link href="css/intro.css" type="text/css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400" rel="stylesheet">
+    
 
 </head>
 <body>
     <div id="container" class="container">
 
         <div id="body">
-            <div id="mainText">
+            <div id="mainText" class="mainText">
                 <br />
                 <h2>Hello World!</h2>
                 <br />
