--- a/example5.html
+++ b/example5.html
@@ -34,6 +34,8 @@
                         <i class="drop drop--2 icon-weather-drop"></i>
                         <i class="drop drop--3 icon-weather-drop"></i>
                     </div>
+
+                    <div class="rainbow"></div>
                     
                     <div class="star star--1"></div>
                     <div class="star star--2"></div>
