--- a/demo2-index.html
+++ b/demo2-index.html
@@ -33,7 +33,7 @@
                         <use xlink:href="image/sprite.svg#icon-home"></use>
                     </svg>
                 </a>
-                <a href="#" class="menu__item menu__item--2" title="User">
+                <a href="/demo2-index.html" class="menu__item menu__item--2" title="Juggle">
                     <svg class="menu__icon">
                         <use xlink:href="image/sprite.svg#icon-user"></use>
                     </svg>
