demo2 svg updated

--- a/demo2-index.html
+++ b/demo2-index.html
@@ -35,7 +35,7 @@
                 </a>
                 <a href="/demo2-index.html" class="menu__item menu__item--2" title="Juggle">
                     <svg class="menu__icon">
-                        <use xlink:href="image/sprite.svg#icon-user"></use>
+                        <use xlink:href="image/sprite.svg#icon-git-pull-request"></use>
                     </svg>
                 </a>
                 <a href="/settings.html" class="menu__item menu__item--3" title="Settings">
